<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Container</class>
 <widget class="QWidget" name="Container">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>730</width>
    <height>490</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QListWidget" name="dockerListWdg">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>95</y>
     <width>730</width>
     <height>395</height>
    </rect>
   </property>
  </widget>
  <widget class="Dtk::Widget::DFrame" name="conDfrm">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>730</width>
     <height>45</height>
    </rect>
   </property>
  </widget>
  <widget class="Dtk::Widget::DFrame" name="columnDfrm">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>50</y>
     <width>730</width>
     <height>40</height>
    </rect>
   </property>
  </widget>
 </widget>
 <customwidgets>
  <customwidget>
   <class>Dtk::Widget::DFrame</class>
   <extends>QFrame</extends>
   <header>DFrame</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
